# iDDS

./: .gitignore  .travis.yml  Dockerfile  Dockerfile.centos7  LICENSE  MIGRATION_SUMMARY.md  Makefile  PYPROJECT_MIGRATION.md  RATE_LIMITING_SUMMARY.md  README  README.md  build_all.py  environment.yml  pyproject.toml  requirements.yaml  setup.cfg  setup.py  start-daemon.sh
client/: MANIFEST.in  README.md  pyproject.toml  setup.py
client/etc/idds/: idds.cfg.client.template
client/lib/idds/: __init__.py
client/lib/idds/client/: authclient.py  base.py  cacherclient.py  catalogclient.py  client.py  clientmanager.py  hpoclient.py  logsclient.py  messageclient.py  metainfoclient.py  pingclient.py  requestclient.py  transformclient.py  utils.py  version.py  workflowmanager.py  workflowtaskclient.py
client/tools/client/env/: environment.yml
client/tools/env/: environment.yml
common/: MANIFEST.in  README.md  pyproject.toml  setup.py
common/lib/idds/: __init__.py
common/lib/idds/common/: authentication.py  cache.py  config.py  constants.py  dict_class.py  event.py  exceptions.py  imports.py  singleton.py  status_utils.py  utils.py  version.py
common/tools/env/: environment.yml
doma/: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
doma/etc/panda/: panda.cfg.template
doma/lib/idds/: __init__.py
doma/lib/idds/doma/: version.py
doma/tools/doma/env/: environment.yml
doma/tools/env/: environment.yml
main/: LICENSE.rst  MANIFEST.in  README.md  prompt.md  pyproject.toml  setup.cfg  setup.py
main/config_default/: alembic.ini  auth.cfg  gacl  healthmonitor_daemon  httpd-idds-443-py311-al9.conf  httpd-idds-443-py39-cc7.conf  httpd_daemon.sh  idds.cfg  idds.ini  idds_health_check.py  logrotate_daemon  logrotate_idds  nats_daemon.sh  panda.cfg  rucio.cfg  supervisord_healthmonitor.ini  supervisord_httpd.ini  supervisord_idds.ini  supervisord_idds_clerk.ini  supervisord_idds_finisher.ini  supervisord_idds_poller.ini  supervisord_idds_receiver.ini  supervisord_idds_submitter.ini  supervisord_idds_transformer.ini  supervisord_idds_trigger.ini  supervisord_iddsfake.ini  supervisord_logrotate.ini  supervisord_nats.ini  supervisord_syslog-ng.ini  vomsprox-renew
main/etc/: rucio.cfg
main/etc/condor/collector/: 00personal_condor.config  09_flin_condor.config
main/etc/condor/submitter/: 00personal_condor.config
main/etc/idds/: alembic.ini.template  idds.cfg.client.template  idds.cfg.template
main/etc/idds/auth/: auth.cfg.template
main/etc/idds/rest/: httpd-idds-443-py36-cc7.conf.template  httpd-idds-443-py39-cc7.conf.template  ssl.conf
main/etc/idds/supervisord.d/: idds.ini
main/etc/idds/website/: 25-port443.conf  25-port80.conf
main/etc/panda/: panda.cfg
main/etc/sql/: oracle_11.sql  oracle_11_test.sql  oracle_19.sql  oracle_19_sqlalchemy.sql  oracle_update.sql  postgres_partition.sql  postgresql.sql  postgresql_init.sql  postgresql_update.sql
main/lib/idds/: version.py
main/lib/idds/agents/: main.py
main/lib/idds/api/: collections.py  contents.py  processings.py  requests.py  transforms.py
main/lib/idds/core/: authentication.py  catalog.py  commands.py  conditions.py  events.py  health.py  messages.py  meta.py  processings.py  rate_limit_manager.py  rate_limiter.py  requests.py  requests_group.py  throttlers.py  transforms.py  version.py  workprogress.py
main/lib/idds/orm/: collections.py  commands.py  conditions.py  contents.py  events.py  health.py  messages.py  meta.py  processings.py  requests.py  requests_group.py  throttlers.py  transforms.py  workprogress.py
main/lib/idds/tests/: activelearning_test.py  auth_test_script.py  cacher_test.py  catalog_test.py  client_test.py  common.py  conddor_test.sh  core_tests.py  core_tests_atlas.py  core_tests_dep_id.py  core_tests_stat.py  datacarousel_test.py  doma_build_test.py  doma_build_test_pandaclient.py  (+85 more)
main/tools/alembic/: new_version.sh
main/tools/conda/: create.sh
main/tools/env/: clean_heartbeat.py  config_monitor.py  config_server  create_database.py  create_postgres_db.sh  destroy_database.py  dump_database.py  environment.yml  flake  install_env_conda.sh  install_idds.sh  install_idds_example.sh  install_idds_full.sh  install_packages.sh  merge_configmap.py  merge_idds_configs.py  setup_dev.sh  setup_httpd_conf.py  setup_idds.sh  setup_idds_path.py  setup_panda.sh
main/tools/git/: configure_git.sh  create-dev-branch  create-patch-branch  pre-commit  prepare-commit-msg  submit-merge  submit-push
main/tools/k8s/: install_k8s.sh
main/tools/logrotate/: idds.conf
main/tools/orm/: create_database.py  destory_database.py  dump_db_schema.py  mysql_create_user.sql
main/tools/panda/: increase_memory
main/tools/pypi/: create.sh  update_version.py
main/tools/rubin/: bash-c  bash-c-enc  cmdline_builder.py  test_build.sh
main/tools/sbatch/: local_sbatch.py
main/tools/sls/: idds_sls.py  sls_document.py
main/tools/syslog-ng/: commands  config_syslog_ng.py  http.conf  idds.conf  syslog-ng.conf
main/tools/test/: test.sh  test_travis.sh
monitor/: README.md  conf.js  dashboard.html  detail_processing.html  detail_request.html  detail_transform.html  processing.html  pyproject.toml  setup.py  transform.html  version.py
monitor/backup/: basic-table.html
monitor/css/: style.extra.css
monitor/data/: conf.js  conf.js.template  dashboard.html  detail_processing.html  processing.html  transform.html
monitor/data/backup/: 404.html  blank.html  dashboard1.html  fontawesome.html  index.html.back  map-google.html  profile.html
monitor/data/css/: style.extra.css
monitor/lib/idds/: __init__.py
prompt/: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
prompt/lib/idds/: __init__.py
website/: MANIFEST.in  README.md  index.html  pyproject.toml  setup.py  version.py
website/data/: index.html
website/lib/idds/: __init__.py
workflow/: MANIFEST.in  README.md  pyproject.toml  setup.py
workflow/lib/idds/: __init__.py
workflow/tools/env/: environment.yml
workflow/tools/make/: environment.yaml  make.sh  make_old.sh  zipheader  zipheader_for_file
(+350 files in other folders)
