[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idds-server"
version = "2.2.21"
description = "intelligent Distributed Dispatch and Scheduling Service (iDDS) - Server Package"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "PanDA Team", email = "atlas-adc-panda@cern.ch"},
]
requires-python = ">=3.9"
dependencies = [
    "idds-common",
    "argcomplete",
    "requests",
    "SQLAlchemy",
    "urllib3",
    "retrying",
    "flask",
    "stomp.py",
    "cx-Oracle",
    "oracledb",
    "psycopg2-binary",
    "pyjwt",
    "cryptography",
    "redis",
    "alembic",
    "deepdiff",
    "pyzmq",
    "oic",
    "cachetools",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
mysql = ["mysqlclient"]
apache = ["mod_wsgi"]
dev = [
    "unittest2",
    "pep8",
    "flake8",
    "pytest",
    "nose",
    "sphinx",
    "recommonmark",
    "sphinx-rtd-theme",
]
optimization = ["nevergrad"]

[project.urls]
Documentation = "https://github.com/HSF/iDDS/wiki"
Source = "https://github.com/HSF/iDDS"

[tool.setuptools]
package-dir = {"" = "lib"}
packages = ["idds.server"]

[tool.setuptools.package-data]
"*" = ["*.template", "*.cfg", "*.conf", "*.ini", "*.sql"]

# Data files are now handled via MANIFEST.in or installed separately
# - etc/idds/*, etc/idds/rest/*, etc/idds/auth/*template
# - etc/idds/website/*, etc/idds/supervisord.d/*
# - etc/idds/condor/*, etc/condor/*, etc/sql/*
# - config_default/*, tools/env/*

[project.scripts]
idds-daemon = "idds.daemon.main:main"
# Add other scripts from bin/ directory as needed
