[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idds-monitor"
version = "2.2.21"
description = "intelligent Distributed Dispatch and Scheduling Service (iDDS) - Monitor Package"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "PanDA Team", email = "atlas-adc-panda@cern.ch"},
]
requires-python = ">=3.9"
dependencies = [
    "flask",
    "idds-common>=2.2.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Documentation = "https://github.com/HSF/iDDS/wiki"
Source = "https://github.com/HSF/iDDS"

[tool.setuptools]
package-dir = {"" = "lib"}

[tool.setuptools.packages.find]
where = ["lib"]
exclude = ["idds"]
namespaces = true

[tool.setuptools.package-data]
"idds.monitor" = ["data/**/*"]

[[tool.setuptools.data-files]]
directory = "etc/idds"
files = ["etc/idds/*.template"]

[[tool.setuptools.data-files]]
directory = "etc/idds/rest"
files = ["etc/idds/rest/*template"]

[[tool.setuptools.data-files]]
directory = "monitor"
files = ["data/**/*"]
