[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idds-monitor"
version = "2.2.21"
description = "intelligent Distributed Dispatch and Scheduling Service (iDDS) - Monitor Package"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "PanDA Team", email = "atlas-adc-panda@cern.ch"},
]
requires-python = ">=3.9"
dependencies = [
    "flask",
    "idds-common>=2.2.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Documentation = "https://github.com/HSF/iDDS/wiki"
Source = "https://github.com/HSF/iDDS"

[tool.setuptools]
package-dir = {"" = "lib"}

[tool.setuptools.packages.find]
where = ["lib"]
namespaces = true

[tool.setuptools.package-data]
"idds.monitor" = ["data/**/*"]

# Data files are now handled via MANIFEST.in
# - etc/idds/*.template, etc/idds/rest/*template
# - data/**/*
