[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idds-prompt"
version = "2.0.0"
description = "intelligent Distributed Dispatch and Scheduling Service (iDDS) - Prompt Package"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "PanDA Team", email = "atlas-adc-panda@cern.ch"},
]
requires-python = ">=3.9"
dependencies = [
    "stomp.py",
    "idds-common>=2.2.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Documentation = "https://github.com/HSF/iDDS/wiki"
Source = "https://github.com/HSF/iDDS"

[tool.setuptools]
package-dir = {"" = "lib"}

[tool.setuptools.packages.find]
where = ["lib"]
exclude = ["idds"]  # Exclude top-level idds package
namespaces = true

[tool.setuptools.package-data]
"*" = ["*.template"]

[[tool.setuptools.data-files]]
directory = "etc/idds"
files = ["etc/idds/*.template"]

[[tool.setuptools.data-files]]
directory = "etc/idds/rest"
files = ["etc/idds/rest/*template"]

[[tool.setuptools.data-files]]
directory = "tools/prompt/env"
files = ["tools/prompt/env/*.yml"]

[project.scripts]
# Add command-line scripts from bin/ if present
