[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idds-website"
version = "2.2.21"
description = "intelligent Distributed Dispatch and Scheduling Service (iDDS) - Website Package"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "PanDA Team", email = "atlas-adc-panda@cern.ch"},
]
requires-python = ">=3.9"
dependencies = [
    "flask",
    "idds-common>=2.2.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Documentation = "https://github.com/HSF/iDDS/wiki"
Source = "https://github.com/HSF/iDDS"

[tool.setuptools]
package-dir = {"" = "lib"}
packages = ["idds.website"]

[tool.setuptools.package-data]
"idds.website" = ["data/**/*"]
