[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idds-workflow"
version = "2.2.21"
description = "intelligent Distributed Dispatch and Scheduling Service (iDDS) - Workflow Package"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "PanDA Team", email = "atlas-adc-panda@cern.ch"},
]
requires-python = ">=3.9"
dependencies = [
    "anytree",
    "networkx",
    "stomp.py",
    "idds-common>=2.2.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Documentation = "https://github.com/HSF/iDDS/wiki"
Source = "https://github.com/HSF/iDDS"

[tool.setuptools]
package-dir = {"" = "lib"}

[tool.setuptools.packages.find]
where = ["lib"]
exclude = ["idds"]
namespaces = true

[[tool.setuptools.data-files]]
directory = "etc/idds"
files = ["etc/idds/*.template"]

[[tool.setuptools.data-files]]
directory = "tools/workflow/env"
files = ["tools/workflow/env/*.yml"]
