[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idds-workflow"
version = "2.2.21"
description = "intelligent Distributed Dispatch and Scheduling Service (iDDS) - Workflow Package"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "PanDA Team", email = "atlas-adc-panda@cern.ch"},
]
requires-python = ">=3.9"
dependencies = [
    "anytree",
    "networkx",
    "stomp.py",
    "idds-common>=2.2.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Documentation = "https://github.com/HSF/iDDS/wiki"
Source = "https://github.com/HSF/iDDS"

[tool.setuptools]
package-dir = {"" = "lib"}
packages = ["idds.workflow"]

# Data files are now handled via MANIFEST.in
# - etc/idds/*.template
# - tools/workflow/env/*.yml
